--- a/taskmaster/src/main/resources/templates/questions.html
+++ b/taskmaster/src/main/resources/templates/questions.html
@@ -7,12 +7,12 @@
     <h1 class="text-black text-center text-4xl  mb-4">Questions</h1>
     <div class="flex flex-col md:flex-row items-center w-full px-4">
         <div class="mb-6 flex flex-col md:flex-row items-center gap-2 w-full">
-            <div class="mr-auto text-black text-lg">6 questions</div>
-            <button onclick="search(getElementById('search'))"
+            <div th:text="${foundedQuestions.getTotalElements() + ' quetion/s'}" class="mr-auto text-black text-lg">6 questions</div>
+            <button onclick="search(getElementById('search').value)"
                     class="px-4 py-2 rounded-lg bg-primary text-primary-foreground hover:bg-primary/80 focus:outline-none focus:ring focus:ring-primary">
                 Search
             </button>
-            <input type="text" placeholder="Search questions..."
+            <input type="text" th:value="${searchQuery}" placeholder="Search questions..."
                    id="search"
                    class="w-full md:w-64 px-4 py-2 rounded-lg  text-black focus:outline-none focus:ring focus:ring-primary"/>
             <select onchange="sort('createdTime', this.value)"
@@ -23,127 +23,37 @@
         </div>
     </div>
     <div class="grid grid-cols-1 md:grid-cols-1 gap-8 mb-8">
-        <a href="#">
+        <a th:each="questtion: ${foundedQuestions}" th:object="${questtion}" th:href="@{/questions/{id}(id = *{id})}">
             <div class="bg-card shadow-lg flex flex-col rounded-lg overflow-hidden">
                 <div class="p-4">
                     <div class="flex justify-between">
-                        <h2 class="text-black font-bold mb-2">Lists in java</h2>
-                        <h3 class="text-black">6 answers</h3>
+                        <h2 th:text="*{title}" class="text-black font-bold mb-2">Lists in java</h2>
+                        <h3 th:text="*{answers + ' answer/s'}" class="text-black">6 answers</h3>
                     </div>
-                    <p class="text-black">I want to sort list. Please help me brothers :)</p>
+                    <p th:text="*{description}" class="text-black">I want to sort list. Please help me brothers :)</p>
                 </div>
                 <div class="px-4 py-2 flex flex-wrap gap-4">
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
+                    <div th:each="tag: *{tags}" th:text="${tag}"
+                         class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
                         windows-subsystem-for-linux
                     </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <p class="ml-auto text-black">Shenol asked on Sep 4, 2008 at 15:59</p>
+                    <p th:text="*{userUsername + ' asked on ' + createdTime}" class="ml-auto text-black">
+                        Shenol asked on Sep 4, 2008 at 15:59</p>
                 </div>
             </div>
         </a>
-        <a href="#">
-            <div class="bg-card shadow-lg flex flex-col rounded-lg overflow-hidden">
-                <div class="p-4">
-                    <div class="flex justify-between">
-                        <h2 class="text-black font-bold mb-2">Lists in java</h2>
-                        <h3 class="text-black">6 answers</h3>
-                    </div>
-                    <p class="text-black">I want to sort list. Please help me brothers :)</p>
-                </div>
-                <div class="px-4 py-2 flex flex-wrap gap-4">
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <p class="ml-auto text-black">Shenol asked on Sep 4, 2008 at 15:59</p>
-                </div>
-            </div>
-        </a>
-        <a href="#">
-            <div class="bg-card shadow-lg flex flex-col rounded-lg overflow-hidden">
-                <div class="p-4">
-                    <div class="flex justify-between">
-                        <h2 class="text-black font-bold mb-2">Lists in java</h2>
-                        <h3 class="text-black">6 answers</h3>
-                    </div>
-                    <p class="text-black">I want to sort list. Please help me brothers :)</p>
-                </div>
-                <div class="px-4 py-2 flex flex-wrap gap-4">
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <p class="ml-auto text-black">Shenol asked on Sep 4, 2008 at 15:59</p>
-                </div>
-            </div>
-        </a>
-        <a href="#">
-            <div class="bg-card shadow-lg flex flex-col rounded-lg overflow-hidden">
-                <div class="p-4">
-                    <div class="flex justify-between">
-                        <h2 class="text-black font-bold mb-2">Lists in java</h2>
-                        <h3 class="text-black">6 answers</h3>
-                    </div>
-                    <p class="text-black">I want to sort list. Please help me brothers :)</p>
-                </div>
-                <div class="px-4 py-2 flex flex-wrap gap-4">
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <p class="ml-auto text-black">Shenol asked on Sep 4, 2008 at 15:59</p>
-                </div>
-            </div>
-        </a>
-        <a href="#">
-            <div class="bg-card shadow-lg flex flex-col rounded-lg overflow-hidden">
-                <div class="p-4">
-                    <div class="flex justify-between">
-                        <h2 class="text-black font-bold mb-2">Lists in java</h2>
-                        <h3 class="text-black">6 answers</h3>
-                    </div>
-                    <p class="text-black">I want to sort list. Please help me brothers :)</p>
-                </div>
-                <div class="px-4 py-2 flex flex-wrap gap-4">
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <div class="box-border bg-secondary text-xs text-secondary-foreground px-2 py-0.5 rounded-full">
-                        windows-subsystem-for-linux
-                    </div>
-                    <p class="ml-auto text-black">Shenol asked on Sep 4, 2008 at 15:59</p>
-                </div>
-            </div>
-        </a>
-        </div>
-        <div class="flex justify-end gap-4 items-center mb-8">
-            <button class="text-sm p-2 text-black border rounded-lg bg-gray-200 hover:bg-gray-300">Previous</button>
-            <button class="text-sm p-2 text-black border rounded-lg bg-gray-200 hover:bg-gray-300">Next</button>
-        </div>
     </div>
+    <div class="flex justify-end gap-4 items-center mb-8">
+        <button th:if="${!foundedQuestions.isFirst()}"
+                onclick="prevPage()"
+                class="text-sm p-2 text-black border rounded-lg bg-gray-200 hover:bg-gray-300">Previous
+        </button>
+        <button th:if="${!foundedQuestions.isLast()}"
+                onclick="nextPage()"
+                class="text-sm p-2 text-black border rounded-lg bg-gray-200 hover:bg-gray-300">Next
+        </button>
+    </div>
+</div>
 </div>
 <footer th:replace="~{/fragments/footer::footer}"></footer>
 <script th:src="@{js/pagingSortingAndFiltering.js}"></script>
